+ implementing Mesh save and restore
+ implementing Points save and restore
+ Save/Open of compressed XML documents
+ Preference page for document
+ Setting of document compression level
+ set _STLP_USE_NEWALLOC to free memory allocated in associative containers
+ implement Open/Save/SaveAs for use from Python

Version: V0.5B3 Date: Mon Jan 30 13:54:25 2006 +++++++++++++++++++++++++++++++
+ use the zipios++ library for reading from/writing into compressed archives
+ update zipios++ sources to current CVS version
+ mesh creation with less memory usag (patch from bgrupp)
+ a fast algorithm to count edges (2 manifold) without additional memory (patch from bgrupp)
+ resolve problems for running macros from file with Microsoft Visual Studio 8.0 (patch from bgrupp)
+ I/O of points and meshes in document container file
+ fixes memory exception in view provider for meshes
+ fixes memory exception when rendering a huge Inventor node
+ more efficient loading of huge meshes

Version: V0.5B4 Date: Sat Feb 04 13:14:55 2006 +++++++++++++++++++++++++++++++
+ use type system in selection class
+ replace DataStream classes by i/ostream classes
+ start standardization of API of exported Python classes
+ implement standard factory in Base::Type
+ remove Feature and ViewProvider Factory, use Standard
+ using update instead of recompute after load document
+ using c++ name in addFeature()
+ updating the installer files
+ fixing the build Dist scripts
+ implementing Comment for Save picture
+ implement MIBA
+ use type system in workbench classes
+ VC8 Port
+ Property Pre Callback
+ Property Lists started
+ FeatureTest
+ Run script from Editor

Version: V0.5B5 Date: Sat Feb 25 18:49:43 2006 +++++++++++++++++++++++++++++++
+ Make use of AC_LIBTOOL_DLOPEN macro for Unix/Linux based systems to allow to
  create modules.
+ Create a loader module (without 'lib' prefix ) for each shared library (with 'lib' prefix)
+ The dirty hack to create symlinks during installation has been removed.